androidmedia: Fix calculation of the frame size for COLOR_FormatYUV420Planar

https://bugzilla.gnome.org/show_bug.cgi?id=734156